feat: Added /auth endpoints
